testdata/baselines/reference/submodule/compiler/jsxFragmentFactoryNoUnusedLocals.errors.txt
jsxFragmentFactoryNoUnusedLocals.tsx(2,1): error TS6192: All imports in import declaration are unused.
jsxFragmentFactoryNoUnusedLocals.tsx(9,11): error TS6198: All destructured elements are unused.


==== jsxFragmentFactoryNoUnusedLocals.tsx (2 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import { Fragment, createElement } from "react"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: All imports in import declaration are unused.
    
    type CounterProps = {
        count?: number
    }
    
    export function Counter({ count = 0 }: CounterProps) {
        const [cnt, setCnt] = null as any;
              ~~~~~~~~~~~~~
!!! error TS6198: All destructured elements are unused.
        return <>
            <p>{cnt}</p>
            <button onClick={() => setCnt((prev) => prev + 1)} type="button">Update</button>
        </>
    }